--- a/JavaScript/2025-12/HP-01/index.html
+++ b/JavaScript/2025-12/HP-01/index.html
@@ -31,127 +31,134 @@
         </div>
     </section>
 
-    <section class="concept">
-        <div class="concept-cont">
-            <div class="cont-text">
-                <h2 class="concept-title">CONCEPT</h2>
-                <p>ディテールにこだわったクオリティファースト</p>
-                <p>親譲りの無鉄砲で小供の時から損ばかりしている。
-                    小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。
-                    なぜそんな無闇をしたと聞く人があるかも知れぬ。別段深い理由でもない。
-                    新築の二階から首を出していたら、同級生の一人が冗談に、いくら威張っても、そこから飛び。
-                </p>
-            </div>
-
-            <div class="cont-img">
-                <img src="img/pic-top-concept-gallery.png" alt="">
-                <img src="img/pic-top-concept-gallery02.png" alt="">
-                <img src="img/pic-top-concept-gallery03.png" alt="">
-                <img src="img/pic-top-concept-gallery04.png" alt="">
-            </div>
-        </div>
-    </section>
-
-    <section class="product">
-        <div class="product-cont">
-
-            <div class="product-items">
-                <div class="product-img">
-                    <img src="img/pic-product.png" alt="">
+    <div class="wrapper">
+        <section class="concept">
+            <div class="concept-cont">
+                <div class="concept-text">
+                    <h2 class="concept-title">CONCEPT</h2>
+                    <p class="concept-bold-text">ディテールにこだわったクオリティファースト</p>
+                    <p>親譲りの無鉄砲で小供の時から損ばかりしている。<br>
+                        小学校に居る時分学校の二階から飛び降りて一週間ほど腰を抜かした事がある。<br>
+                        なぜそんな無闇をしたと聞く人があるかも知れぬ。別段深い理由でもない。<br>
+                        新築の二階から首を出していたら、同級生の一人が冗談に、いくら威張っても、そこから飛び。
+                    </p>
                 </div>
-                <div class="product-text">
-                    <h3>イージーチェア</h3>
-                    <p>親譲りの無鉄砲で小供の時から損ばかりしているよ。小学校に居る時分学校の二階から。</p>
-                    <button>VIEW MORE</button>
+
+                <div class="concept-img">
+                    <img src="img/pic-top-concept-gallery.png" alt="">
+                    <img src="img/pic-top-concept-gallery02.png" alt="">
+                    <img src="img/pic-top-concept-gallery03.png" alt="">
+                    <img src="img/pic-top-concept-gallery04.png" alt="">
                 </div>
             </div>
+        </section>
 
-            <div class="product-items">
-                <div class="product-img">
-                    <img src="img/pic-product02.png" alt="">
+        <section class="product">
+            <div class="product-cont">
+
+                <h2 class="product-title">PRODUCT</h2>
+
+                <div class="product-items">
+                    <div class="product-img">
+                        <img src="img/pic-product.png" alt="">
+                    </div>
+                    <div class="product-text">
+                        <h3>イージーチェア</h3>
+                        <p>親譲りの無鉄砲で小供の時から損ばかりしているよ。小学校に居る時分学校の二階から。</p>
+                        <button>VIEW MORE</button>
+                    </div>
                 </div>
-                <div class="product-text">
-                    <h3>イージーチェア</h3>
-                    <p>親譲りの無鉄砲で小供の時から損ばかりしているよ。小学校に居る時分学校の二階から。</p>
-                    <button>VIEW MORE</button>
+
+                <div class="product-items">
+                    <div class="product-img">
+                        <img src="img/pic-product02.png" alt="">
+                    </div>
+                    <div class="product-text">
+                        <h3>イージーチェア</h3>
+                        <p>親譲りの無鉄砲で小供の時から損ばかりしているよ。小学校に居る時分学校の二階から。</p>
+                        <button>VIEW MORE</button>
+                    </div>
+                </div>
+
+                <div class="product-items">
+                    <div class="product-img">
+                        <img src="img/pic-product03.png" alt="">
+                    </div>
+                    <div class="product-text">
+                        <h3>イージーチェア</h3>
+                        <p>親譲りの無鉄砲で小供の時から損ばかりしているよ。小学校に居る時分学校の二階から。</p>
+                        <button>VIEW MORE</button>
+                    </div>
+                </div>
+
+                <div class="product-items">
+                    <div class="product-img">
+                        <img src="img/pic-product04.png" alt="">
+                    </div>
+                    <div class="product-text">
+                        <h3>イージーチェア</h3>
+                        <p>親譲りの無鉄砲で小供の時から損ばかりしているよ。小学校に居る時分学校の二階から。</p>
+                        <button>VIEW MORE</button>
+                    </div>
+                </div>
+
+                <div class="insta">
+                    <p>インスタグラムでも商品の紹介をしています。</p>
+                    <button>VIEW INSTAGRAM</button>
+                </div>
+
+            </div>
+        </section>
+
+        <section class="showroom">
+            <div class="showroom-cont">
+
+                <h2>SHOWROOM</h2>
+
+                <div class="showroom-items">
+                    <div class="item">
+                        <div class="item-img"><img src="img/pic-top-showroom-ginza.png" alt=""></div>
+
+                        <h4>新宿店</h4>
+                        <button>VIEW MORE</button>
+                    </div>
+
+                    <div class="item">
+                        <div class="item-img"><img src="img/pic-top-showroom-ginza.png" alt=""></div>
+
+                        <h4>渋谷店</h4>
+                        <button>VIEW MORE</button>
+                    </div>
+
+                    <div class="item">
+                        <div class="item-img"><img src="img/pic-top-showroom-ginza.png" alt=""></div>
+
+                        <h4>銀座店</h4>
+                        <button>VIEW MORE</button>
+                    </div>
                 </div>
             </div>
+        </section>
 
-            <div class="product-items">
-                <div class="product-img">
-                    <img src="img/pic-product03.png" alt="">
-                </div>
-                <div class="product-text">
-                    <h3>イージーチェア</h3>
-                    <p>親譲りの無鉄砲で小供の時から損ばかりしているよ。小学校に居る時分学校の二階から。</p>
-                    <button>VIEW MORE</button>
-                </div>
+        <section class="online-shop">
+            <h2>ONLINE SHOP</h2>
+            <button class="online-shop-button"></button>
+        </section>
+
+        <section class="company">
+            <img src="img/logo.svg" alt="">
+
+            <p>株式会社MIGLIORE</p>
+            <p>〒012-3456 東京都渋谷区ABC</p>
+            <p>TEL012-345-6789</p>
+
+            <div class="sns">
+                <a href="">TWITTER</a>
+                <a href="">INSTAGRAM</a>
+                <a href="">FACEBOOK</a>
             </div>
-
-            <div class="product-items">
-                <div class="product-img">
-                    <img src="img/pic-product04.png" alt="">
-                </div>
-                <div class="product-text">
-                    <h3>イージーチェア</h3>
-                    <p>親譲りの無鉄砲で小供の時から損ばかりしているよ。小学校に居る時分学校の二階から。</p>
-                    <button>VIEW MORE</button>
-                </div>
-            </div>
-
-            <div class="insta">
-                <p>インスタグラムでも商品の紹介をしています。</p>
-                <button>VIEW INSTAGRAM</button>
-            </div>
-
-        </div>
-    </section>
-
-    <section class="showroom">
-        <div class="showroom-cont">
-            <div class="showroom-items">
-                <div class="item">
-                    <div class="item-img"><img src="img/pic-top-showroom-ginza.png" alt=""></div>
-
-                    <h4>新宿店</h4>
-                    <button>VIEW MORE</button>
-                </div>
-
-                <div class="item">
-                    <div class="item-img"><img src="img/pic-top-showroom-ginza.png" alt=""></div>
-
-                    <h4>渋谷店</h4>
-                    <button>VIEW MORE</button>
-                </div>
-
-                <div class="item">
-                    <div class="item-img"><img src="img/pic-top-showroom-ginza.png" alt=""></div>
-
-                    <h4>銀座店</h4>
-                    <button>VIEW MORE</button>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="online-shop">
-        <h2>ONLINE SHOP</h2>
-        <button class="online-shop-button"></button>
-    </section>
-
-    <section class="company">
-        <img src="img/logo.svg" alt="">
-
-        <p>株式会社MIGLIORE</p>
-        <p>〒012-3456 東京都渋谷区ABC</p>
-        <p>TEL012-345-6789</p>
-
-        <div class="sns">
-            <a href="">TWITTER</a>
-            <a href="">INSTAGRAM</a>
-            <a href="">FACEBOOK</a>
-        </div>
-    </section>
+        </section>
+    </div>
 
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d16335.061820349369!2d139.69307289287104!3d35.701973757609785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188d2f37e44929%3A0x70e03a4ceb52d545!2z5paw5aSn5LmF5L-d6aeF!5e0!3m2!1sja!2sjp!4v1766297080961!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
