headerとkvのコーディングはレスポンシブ化まで完了（不備あり）

--- a/模写コーディング/模写修行-中級２/index.html
+++ b/模写コーディング/模写修行-中級２/index.html
@@ -24,22 +24,42 @@
     <div class="container">
         <div class="kv">
             <div class="kv-left">
-                <div class="kv-text"></div>
+                <div class="kv-left-text">
+                    <p class="kv-text01">月500円で使える小説執筆ツール</p>
+                    <h2 class="kv-text02">小説の執筆を<span class="sp-br"><br></span>圧倒的に効率化</h2>
+                </div>
+                <ul class="kv-category">
+                    <li class="category-item">本編の執筆</li>
+                    <li class="category-item">物語の設定</li>
+                    <li class="category-item">プロット作成</li>
+                    <li class="category-item">人物設定</li>
+                    <li class="category-item">時系列整理</li>
+                    <li class="category-item">用語集設定</li>
+                    <li class="category-item">バージョン管理</li>
+                    <li class="category-item">不必要な機能は非表示</li>
+                    <li class="category-item">その他便利な機能</li>
+                </ul>
             </div>
             <div class="kv-form">
-                <span class="form-title">無料登録</span>
-                <div class="form">
-                    <p>メールアドレス</p>
-                    <textarea class="mail" name="メールアドレス" id="" placeholder=""></textarea>
-                    <p>パスワード</p>
-                    <textarea class="password" name="メールアドレス" id="" placeholder=""></textarea>
-                    <p><a href="">利用規約</a>に同意する</p>
+                <span class="form-title">\ 無料登録 /</span>
+                <div class="form-content">
+                    <div class="form">
+                        <p class="area-title">メールアドレス</p>
+                        <input type="text">
+                        <p class="area-title">パスワード</p>
+                        <input type="text">
+                    </div>
+                    <div class="terms">
+                        <input type="checkbox">
+                        <p class="check-box-text"><a href="">利用規約</a>に同意する</p>
+                    </div>
+                        <button class="form-button">登録する</button>
                 </div>
             </div>
         </div>
     </div>
 
-
+    
     
 </body>
 </html>
