--- a/JavaScript/2025-12/copilot05/index.html
+++ b/JavaScript/2025-12/copilot05/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <img id="mainImage" src="img/cat-6060835_1280.jpg" alt="動物の画像" width="300">
+        <img id="mainImage" src="https://dog.ceo/api/breeds/image/random" alt="動物の画像" width="300">
         <br>
         <button id="switchBtn">画像を切り替え</button>
     </div>
