Figmaからのコーディングできた！不備あり！！

--- a/模写コーディング/模写修行-中級２/index.html
+++ b/模写コーディング/模写修行-中級２/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <div class="container">
-        <div class="kv">
+        <section class="kv">
             <div class="kv-left">
                 <div class="kv-left-text">
                     <p class="kv-text01">月500円で使える小説執筆ツール</p>
@@ -56,7 +56,247 @@
                         <button class="form-button">登録する</button>
                 </div>
             </div>
-        </div>
+        </section>
+
+        <section class="video">
+            <h3 class="section-title">動画でわかるCWstudio</h3>
+            <div class="youtube-wrap">
+                <iframe
+                    src="https://www.youtube.com/embed/k6W53Sk0HNk?si=7ryXbplWrVE4mGLX"
+                    title="YouTube video player" 
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" 
+                    allowfullscreen>
+                </iframe>
+            </div>
+        </section>
+
+        <section class="features">
+            <h2 class="section-title">9つの機能・特徴</h2>
+            <div class="features-list">
+                <ul class="list">
+                    <li class="item01 item-top">
+                        <div class="item-text">
+                            <span class="point">POINT01</span>
+                            <h4 class="item-title">本編の執筆</h4>
+                            <p class="item-caption">本編の執筆ができます。フルスクリーンモードで執筆に集中することが出来ます。</p>
+                        </div>
+                        <div class="item-image">
+                            <img src="img/pic-top-function.png" alt="">
+                        </div>
+                    </li>
+                    <li class="item01">
+                        <div class="item-text">
+                            <span class="point">POINT01</span>
+                            <h4 class="item-title">本編の執筆</h4>
+                            <p class="item-caption">本編の執筆ができます。フルスクリーンモードで執筆に集中することが出来ます。</p>
+                        </div>
+                        <div class="item-image">
+                            <img src="img/pic-top-function.png" alt="">
+                        </div>
+                    </li>
+                    <li class="item01">
+                        <div class="item-text">
+                            <span class="point">POINT01</span>
+                            <h4 class="item-title">本編の執筆</h4>
+                            <p class="item-caption">本編の執筆ができます。フルスクリーンモードで執筆に集中することが出来ます。</p>
+                        </div>
+                        <div class="item-image">
+                            <img src="img/pic-top-function.png" alt="">
+                        </div>
+                    </li>
+                    <li class="item01">
+                        <div class="item-text">
+                            <span class="point">POINT01</span>
+                            <h4 class="item-title">本編の執筆</h4>
+                            <p class="item-caption">本編の執筆ができます。フルスクリーンモードで執筆に集中することが出来ます。</p>
+                        </div>
+                        <div class="item-image">
+                            <img src="img/pic-top-function.png" alt="">
+                        </div>
+                    </li>
+                    <li class="item01">
+                        <div class="item-text">
+                            <span class="point">POINT01</span>
+                            <h4 class="item-title">本編の執筆</h4>
+                            <p class="item-caption">本編の執筆ができます。フルスクリーンモードで執筆に集中することが出来ます。</p>
+                        </div>
+                        <div class="item-image">
+                            <img src="img/pic-top-function.png" alt="">
+                        </div>
+                    </li>
+                    <li class="item01">
+                        <div class="item-text">
+                            <span class="point">POINT01</span>
+                            <h4 class="item-title">本編の執筆</h4>
+                            <p class="item-caption">本編の執筆ができます。フルスクリーンモードで執筆に集中することが出来ます。</p>
+                        </div>
+                        <div class="item-image">
+                            <img src="img/pic-top-function.png" alt="">
+                        </div>
+                    </li>
+                    <li class="item01">
+                        <div class="item-text">
+                            <span class="point">POINT01</span>
+                            <h4 class="item-title">本編の執筆</h4>
+                            <p class="item-caption">本編の執筆ができます。フルスクリーンモードで執筆に集中することが出来ます。</p>
+                        </div>
+                        <div class="item-image">
+                            <img src="img/pic-top-function.png" alt="">
+                        </div>
+                    </li>
+                    <li class="item01">
+                        <div class="item-text">
+                            <span class="point">POINT01</span>
+                            <h4 class="item-title">本編の執筆</h4>
+                            <p class="item-caption">本編の執筆ができます。フルスクリーンモードで執筆に集中することが出来ます。</p>
+                        </div>
+                        <div class="item-image">
+                            <img src="img/pic-top-function.png" alt="">
+                        </div>
+                    </li>
+                    <li class="item01">
+                        <div class="item-text">
+                            <span class="point">POINT01</span>
+                            <h4 class="item-title">本編の執筆</h4>
+                            <p class="item-caption">本編の執筆ができます。フルスクリーンモードで執筆に集中することが出来ます。</p>
+                        </div>
+                        <div class="item-image">
+                            <img src="img/pic-top-function.png" alt="">
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="others">
+                <h2 class="others-title">その他の便利な機能</h2>
+                <ul class="others-list">
+                    <li class="others-list-item">
+                        <img src="img/icon-dark-mode.svg" alt="">
+                        <p class="others-text">長時間の執筆のために
+                        ダークモード掲載</p>
+                    </li>
+                    <li class="others-list-item">
+                        <img src="img/icon-preview.svg" alt="">
+                        <p class="others-text">縦書きプレビュー可能</p>
+                    </li>
+                    <li class="others-list-item">
+                        <img src="img/icon-sort.svg" alt="">
+                        <p class="others-text">各項目は自由に
+                        並び替えが変更可能</p>
+                    </li>
+                    <li class="others-list-item">
+                        <img src="img/icon-phone.svg" alt="">
+                        <p class="others-text">スマホでも執筆可能</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section class="campaign">
+            <p class="campaign-text01">今なら30日全機能無料で使用できます！</p>
+            <p class="campaign-text02">月500円で使える小説執筆ツール</p>
+            <button class="campaign-button">試しに無料で使ってみる</button>
+        </section>
+
+        <section class="plan">
+            <h2 class="section-title">プラン・料金</h2>
+            <ul class="plan-list">
+                <li class="plan-card">
+                    <h4 class="card-title">無料プラン</h4>
+                    <p class="plan-text01">月額使用料</p>
+                    <p class="plan-price">0円</p>
+                    <p class="plan-text02">主な機能</p>
+                    <div class="plan-features">
+                        <p class="plan-features-text">作成できる小説の数は1つ</p>
+                        <p class="plan-features-text">本編の執筆</p>
+                    </div>
+                </li>
+                <li class="plan-card card02">
+                    <h4 class="card-title title02">有料プラン</h4>
+                    <p class="plan-text01">月額使用料</p>
+                    <p class="plan-price">500円</p>
+                    <p class="plan02-text02">主な機能</p>
+                    <div class="plan-features">
+                        <p class="plan02-features-text">作成できる小説の数は無制限</p>
+                        <p class="plan02-features-text">本編の執筆</p>
+                        <p class="plan02-features-text">物語の設定</p>
+                        <p class="plan02-features-text">プロット</p>
+                        <p class="plan02-features-text">人物</p>
+                        <p class="plan02-features-text">時系列</p>
+                        <p class="plan02-features-text">その他全ての機能</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <section class="faq">
+            <h2 class="section-title">よくあるご質問</h2>
+            <ul class="faq-list">
+                <li class="faq-list-item faq-list-item-top">
+                    <p class="question">支払い手段を教えてください。</p>
+                    <p class="answer">
+                        支払いはクレジットカード払いのみになります。対応カードは下記になります。<br>
+                    VISA / Master Card / JCB / American Express / Discover / Diners
+                    </p>
+                </li>
+                <li class="faq-list-item">
+                    <p class="question">有料プランから無料プランに変更したらデータは消えてしまいますか？</p>
+                    <p class="answer">
+                        無料プランは作成できる小説の数は1つとなります。有料プランで2つ以上作成している
+                        場合は、プラン変更時に残す小説を1つ選択することになります。それ以外は消えてしま
+                        うので、変更前にバックアップでデータをご自身のPCに保存しておくことをおすすめします。
+                    </p>
+                </li>
+                <li class="faq-list-item">
+                    <p class="question">操作は難しくないですか？</p>
+                    <p class="answer">直感的に操作できるようになっています。<a href="">使い方ガイド</a>もあるので、
+                        安心して使っていただけると思います。
+                    </p>
+                </li>
+                <li class="faq-list-item">
+                    <p class="question">領収書は発行できますか？</p>
+                    <p class="answer">管理画面からpdfで発行が可能です。</p>
+                </li>
+                <li class="faq-list-item">
+                    <p class="question">見た目を確認できますか？</p>
+                    <p class="answer">
+                        デモページをご用意しているので、<a href="">こちら</a>からご覧ください。
+                        本編の執筆は無料プランでも可能なので、まずは無料プランで使っていただく事もできます。
+                    </p>
+                </li>
+                <li class="faq-list-item">
+                    <p class="question">動作環境を教えてください。</p>
+                    <p class="answer">
+                        下記の環境でお使いいただけます。<br>
+                        PC：Google Chrome / Safari / FireFox / Edge / 各最新版<br>
+                        スマートフォン：iOS Safari / Android Chrome / 各最新版
+                    </p>
+                </li>
+            </ul>
+        </section>
+
+        <section class="campaign">
+            <p class="campaign-text01">今なら30日全機能無料で使用できます！</p>
+            <p class="campaign-text02">月500円で使える小説執筆ツール</p>
+            <button class="campaign-button">試しに無料で使ってみる</button>
+        </section>
+
+        <footer class="footer">
+            <img src="img/logo.svg" alt="ロゴ">
+
+            <div class="link-area">
+                <p class="link">
+                    <a href="">会社概要</a>/
+                    <a href="">利用規約</a>/
+                    <a href="">プライバシーポリシー</a>/
+                    <a href="">お問い合わせ</a>
+                </p>
+            </div>
+
+            <p class="copyright">© 2021 CWstudio</p>
+        </footer>
+
     </div>
 
     
